Fixed hamburger icon not visible.

--- a/styles.scss
+++ b/styles.scss
@@ -91,8 +91,7 @@ img {
   width: 100%;
 }
 
-.hero-container img,
-.hero-container picture {
+.main-hero-img,.main-hero-picture {
   width: 100%;
 }
 
@@ -228,6 +227,7 @@ img {
     }
   }
 }
+
 
 // Desktop
 @media screen and (min-width: 800px) {
